details added to the click animation

--- a/html/indexV2.html
+++ b/html/indexV2.html
@@ -18,8 +18,13 @@
 
 <div class="mainContainer">
     <div class="textBox">
-        <h1 class="headerText">Hello, I'm <br> Jens Kristian</h1>
-        <p class="mainText">A passionate software developer focused on creating clean, user-friendly solutions with modern technologies. Based in Your Copenhagen, specialized in web development.</p>
+        <h1 class="headerText">
+            <span id="firstPartHeaderText">Hello, I'm</span><br>
+            Jens Kristian
+        </h1>
+        <p class="mainText"> This is where I normally would tell you how cool I am and how I can solve all of your
+            technical problems. The most important thing I want you to know is that I love to build things. Feel free to browse my projects – and reach out if you need help centering a div.
+        </p>
         <div class="btnWrapper">
             <a class="btn" id="projectBtn">View projects</a>
             <a class="btn" id="contactBtn">Contact me</a>
@@ -31,6 +36,7 @@
 
 </div>
 
+<script src="../javaScript/indexV2.js"></script>
 
 </body>
 </html>
