contact buttons added

--- a/html/indexV2.html
+++ b/html/indexV2.html
@@ -23,7 +23,8 @@
             Jens Kristian
         </h1>
         <p class="mainText"> This is where I normally would tell you how cool I am and how I can solve all of your
-            technical problems. The most important thing I want you to know is that I love to build things. Feel free to browse my projects – and reach out if you need help centering a div.
+            technical problems. The most important thing I want you to know is that I love to build things. Feel free to
+            browse my projects – and reach out if you need help centering a div.
         </p>
         <div class="btnWrapper">
             <a class="btn" id="projectBtn">View projects</a>
@@ -33,6 +34,24 @@
     <div>
         <img src="../images/profile.jpg" alt="profile Picture" class="profilePicture">
     </div>
+</div>
+
+<div id="contactMainContainer">
+
+    <a class="contactDiv" href="https://www.linkedin.com/in/jenskrh/" target="_blank" rel="noopener noreferrer">
+        <img class="contactLogo" src="../images/linkedin-logo.png" alt="linkedin logo">
+    </a>
+    <a class="contactDiv" href="mailto:jenskristian79@gmail.com" target="_blank" rel="noopener noreferrer">
+        <img class="contactLogo" src="../images/mail.png" alt="mail logo">
+
+    </a>
+    <a class="contactDiv" href="https://github.com/JensKristianRuben" target="_blank" rel="noopener noreferrer">
+        <img class="contactLogo" src="../images/github-sign.png" alt="github logo">
+    </a>
+
+    <button class="goBackBtn">
+        <img class="contactLogo" src="../images/right-arrow.png" alt="linkedin logo">
+    </button>
 
 </div>
 
