arrows and pictures added to projects

--- a/html/indexV2.html
+++ b/html/indexV2.html
@@ -49,9 +49,48 @@
         <img class="contactLogo" src="../images/github-sign.png" alt="github logo">
     </a>
 
-    <button class="goBackBtn">
-        <img class="contactLogo" src="../images/right-arrow.png" alt="linkedin logo">
+    <button class="goBackBtn" id="goBackBtn">
+        <img class="contactLogo" src="../images/right-arrow.png" alt="arrow icon">
     </button>
+
+</div>
+
+<div id="projectsMainContainer">
+    <button class="goBackBtn" id="goBackBtnFromProjects">
+        <img class="contactLogo" src="../images/left-arrow.png" alt="arrow icon">
+    </button>
+
+    <div class="projectContainer">
+        <div class="projectImageContainer">
+            <img src="../images/weeksLeftPicture.png" alt="Picture incomming" class="projectImage">
+        </div>
+        <h3 class="projectHeader">Weeks left</h3>
+        <p class="projectText">Ever stopped to wonder how many weeks you have left to live? This powerful illustration turns your lifespan into a grid — a quiet reminder that time is ticking.</p>
+        <a class="link">Veiw Project</a>
+    </div>
+    <div class="projectContainer">
+        <div class="projectImageContainer">
+            <img src="../images/OptimateFleetLogo.png" alt="Picture incomming" class="projectImage">
+        </div>
+        <h3 class="projectHeader">OptimateFleet</h3>
+        <p class="projectText">ERP system for Bilabonnement.dk
+            to manage cars, contracts, and customer agreements.
+            It tracks each vehicle from purchase to rental and resale,
+            giving the company full lifecycle visibility.</p>
+        <a class="link">Veiw Project</a>
+    </div>
+    <div class="projectContainer">
+        <div class="projectImageContainer">
+            <img src="../images/AIintegrationPic.png" alt="Picture incomming" class="projectImage">
+        </div>
+        <h3 class="projectHeader">LLM app integration</h3>
+        <p class="projectText">LLM-powered recipe generator
+            that finds the cheapest ingredients for any meal.
+            It adds them directly to your cart on Nemlig.com,
+            combining smart meal planning with real-time pricing.</p>
+        <a class="link">Veiw Project</a>
+    </div>
+
 
 </div>
 
