--- a/html/indexV2.html
+++ b/html/indexV2.html
@@ -11,9 +11,9 @@
 </head>
 <body>
 <header class="header" id="header">
-    <a class="link">Home</a>
-    <a class="link">Projects</a>
-    <a class="link">Contact</a>
+    <a class="link" href="indexV2.html" id="homeLink" style="border-bottom: 1px solid black; pointer-events: none;">Home</a>
+    <a class="link" id="projectsLink">Projects</a>
+    <a class="link" id="contactLink">Contact</a>
 </header>
 
 <div class="mainContainer">
@@ -66,7 +66,7 @@
         </div>
         <h3 class="projectHeader">Weeks left</h3>
         <p class="projectText">Ever stopped to wonder how many weeks you have left to live? This powerful illustration turns your lifespan into a grid — a quiet reminder that time is ticking.</p>
-        <a class="link">Veiw Project</a>
+        <a class="link" href="weeksLeft.html">Veiw Project</a>
     </div>
     <div class="projectContainer">
         <div class="projectImageContainer">
